# purkinje-learning-myocardial-mesh

./: .gitignore  .pre-commit-config.yaml  00_build_mesh_and_lead_field.ipynb  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: release-please.yml  release.yml  test.yml
data/crtdemo/nb/: True_LVtree.vtu  True_RVtree.vtu  True_ecg  True_endo.vtu
docs/: conf.py  examples.rst  index.rst
examples/: build_mesh_and_lead_field.py
scripts/: bo_wrapper_cv_purk.py  validate_myocardial_mesh_smoke.py
src/myocardial_mesh/: MyocardialMesh.py  __init__.py  _types.py  geometry_utils.py  jax_purkinje.py  myocardial_mesh.py  orchestrator.py  plotting.py
src/myocardial_mesh/core/: __init__.py  activation.py  fem_utils.py  geometry_utils.py  lead_field_solver.py  vtk_geometry_utils.py
src/myocardial_mesh/io/: __init__.py  fiber_processor.py  mesh_io.py
src/myocardial_mesh/lead_field/: lead_field_solver.py
src/myocardial_mesh/viz/: __init__.py  data_plotter.py
tests/: test_MyocardialMesh.py  test_geometry_utils.py
tests/core/: test_fem_utils.py  test_lead_field_solver.py  test_vtk_geometry_utils.py
tests/e2e/: test_e2e_acceptance.py  test_jax_e2e.py  test_nb_parity.py
tests/examples/: test_build_mesh_and_lead_field.py
tests/integration_tests/: test_integration_demo.py
tests/io/: test_mesh_io.py
tests/myocardial_mesh/: conftest.py  test_activation.py  test_fem_utils.py  test_fiber_processor.py  test_geometry_utils.py  test_lead_field_solver.py  test_mesh_io.py  test_myocardial_mesh_init.py  test_myocardial_mesh_methods.py  test_orchestrator_unit.py  test_public_api.py
tests/viz/: test_data_plotter.py
