[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myocardial-mesh"
version = "0.1.1"
description = "Ventricular myocardial mesh construction for ECG and FIM simulation"
authors = [
  {name = "Ricardo García Ramírez", email = "rgr.5882@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

keywords = ["mesh", "myocardial", "ECG", "FIM", "vtk", "pyvista", "simulation", "biomedical"]

dependencies = [
    "numpy",
    "scipy",
    "vtk",
    "pyvista",
    "meshio",
    "fim-python",
]

[project.urls]
"Homepage" = "https://github.com/ricardogr07/purkinje-learning-myocardial-mesh"
"Repository" = "https://github.com/ricardogr07/purkinje-learning-myocardial-mesh"

[tool.setuptools]
packages = ["myocardial_mesh"]
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = true

[tool.ruff]
target-version = "py310"

[tool.mypy]
files = ["src"]
python_version = "3.10"
strict = true
ignore_missing_imports = true
disallow_untyped_calls = false
check_untyped_defs = true
exclude = '^tests/'

[tool.pydocstyle]
convention = "google"
match-dir = "^src"
match      = ".*\\.py"
add-ignore = ["D105", "D107"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=myocardial_mesh --cov-fail-under=80 -ra -q"
testpaths  = ["tests"]
markers = [
  "baseline: parity against notebook ground truth",
  "acceptance: feature-level E2E acceptance",
  "jax: tests requiring the JAX/UV purkinje path"
]
[tool.tox]
envlist                    = ["py310", "py312", "lint"]
isolated_build             = true
skip_missing_interpreters  = true

[tool.tox.envs.py310]
deps     = ["pytest"]
commands = ["pytest tests"]

[tool.tox.envs.py312]
deps     = ["pytest"]
commands = ["pytest tests"]

[tool.tox.envs.lint]
description   = "Run ruff and black"
skip_install  = true
deps          = ["black", "ruff"]
commands      = [
  "black --check src/ tests/",
  "ruff check src/ tests/"
]
